--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1381,7 +1381,9 @@ body {
   font-size: 14px;
   line-height: 1.6;
   color: #636b6f;
-  background-color: #FFE6E6;
+  background-color: #FFE9C6;
+  /* Background Bolor */
+  /*#FFE6E6    ->     Light Red*/
 }
 
 input,
@@ -1429,7 +1431,8 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.6;
-  background-color: #FFE6E6;
+  /*background-color: #FFE6E6;*/
+  background-color: #FFE9C6;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -4653,7 +4656,8 @@ tbody.collapse.in {
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #FFE6E6;
+  /*background-color: #FFE6E6;*/
+  background-color: #FFE9C6;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
