--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1381,9 +1381,7 @@ body {
   font-size: 14px;
   line-height: 1.6;
   color: #636b6f;
-  background-color: #FFE9C6;
-  /* Background Bolor */
-  /*#FFE6E6    ->     Light Red*/
+  background-color: #FFE6E6;
 }
 
 input,
@@ -1431,8 +1429,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.6;
-  /*background-color: #FFE6E6;*/
-  background-color: #FFE9C6;
+  background-color: #FFE6E6;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -4656,8 +4653,7 @@ tbody.collapse.in {
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
-  /*background-color: #FFE6E6;*/
-  background-color: #FFE9C6;
+  background-color: #FFE6E6;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
