--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,15 +1,16 @@
 
 //hell rot  - > FFE6E6
 //dunkel rot - > FFB3B3
-//hell grun - > DFF0D8
+//hell grun - > cbedbe
 //dunkel grun - > 9BD293
 
 // Body
-$body-bg:#FFE6E6;
+$body-bg:#d0d8ea;
+$border:#c6c6c6;
 // #f5f8fa;
 
 // Borders
-$laravel-border-color: darken($body-bg, 10%);
+$laravel-border-color: darken($border, 10%);
 $list-group-border: $laravel-border-color;
 $navbar-default-border: $laravel-border-color;
 $panel-default-border: $laravel-border-color;
