get near routes | api bus

--- a/resources/assets/sass/_welcome.scss
+++ b/resources/assets/sass/_welcome.scss
@@ -34,6 +34,10 @@
         border-right: 0;
         border-top: 0;
 }
+.tab-content
+{
+    margin-top: 20px;
+}
 @media (max-width: 992px) {
     body {
         padding-top: 0px;
