--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7730,6 +7730,10 @@ button.close {
   border-top: 0;
 }
 
+.tab-content {
+  margin-top: 20px;
+}
+
 @media (max-width: 992px) {
   body {
     padding-top: 0px;
