--- a/resources/assets/sass/_welcome.scss
+++ b/resources/assets/sass/_welcome.scss
@@ -1,3 +1,13 @@
+footer{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #222222;
+    text-align: center;
+    height: 40px;
+}
 #wrapper {
     min-height: 100%;
     height: 100%;
@@ -8,7 +18,7 @@
     display: inline-block;
 }
 #main-wrapper {
-    height: 100%;
+    height: calc(100% - 40px);
     overflow-y: auto;
     padding: 50px 0 0px 0;
 }
@@ -54,10 +64,18 @@
     }
 }
 @media (max-width: 992px) {
+    #main-wrapper{
+        height: 100%;
+        margin-bottom: 40px;
+    }
     #sidebar-wrapper {
         position: static;
         height:auto;
         max-height: 300px;
   		border-right:0;
 	}
+    .text-desktop
+    {
+        display: none;
+    }
 }
