--- a/resources/assets/sass/_welcome.scss
+++ b/resources/assets/sass/_welcome.scss
@@ -8,6 +8,13 @@ footer{
     text-align: center;
     height: 40px;
 }
+input {
+    -webkit-appearance: searchfield;
+}
+
+input[type=search]::-webkit-search-cancel-button {
+    -webkit-appearance: searchfield-cancel-button;
+}
 #wrapper {
     min-height: 100%;
     height: 100%;
