--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7697,6 +7697,9 @@ footer {
   background-color: #222222;
   text-align: center;
   height: 40px;
+  border-color: #090909;
+  border-top-style: solid;
+  border-top-width: 1px;
 }
 
 input[type=search] {
@@ -7730,7 +7733,7 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 #sidebar-wrapper {
-  height: 100%;
+  height: calc(100% - 40px);
   padding: 54px 0 0px 0;
   position: fixed;
   background-color: #222;
@@ -7785,6 +7788,34 @@ input[type=search]::-webkit-search-cancel-button {
   .text-desktop {
     display: none;
   }
+}
+
+.download-wrapper {
+  height: calc(100% - 40px);
+  position: absolute;
+}
+
+.text-white {
+  color: white;
+}
+
+.background-download {
+  background: url("../images/patterns/old_moon.png");
+}
+
+.donwload-right {
+  display: -webkit-box;
+  display: flex;
+  /* justify-content: flex-end; */
+  /* align-content: flex-end; */
+  -webkit-box-align: end;
+  align-items: flex-end;
+  max-width: 100%;
+  height: calc(100% - 40px);
+}
+
+.donwload-right img {
+  max-width: 100%;
 }
 
 /*# sourceMappingURL=app.css.map */
