--- a/resources/assets/sass/_welcome.scss
+++ b/resources/assets/sass/_welcome.scss
@@ -7,6 +7,9 @@ footer{
     background-color: #222222;
     text-align: center;
     height: 40px;
+    border-color: #090909;
+    border-top-style: solid;
+    border-top-width: 1px;
 }
 input[type=search] {
     -webkit-appearance: searchfield;
@@ -35,7 +38,7 @@ input[type=search]::-webkit-search-cancel-button {
     overflow-y: auto;
 }
 #sidebar-wrapper {
-    height: 100%;
+    height: calc(100% - 40px);
     padding: 54px 0 0px 0;
     position: fixed;
     background-color: #222;
